[package]
name = "rusty-beer"
version = "0.1.0"
authors = ["Rudi Horn <dyn-git@rudi-horn.de>", "Wen Kokke <wen.kokke@gmail.com>", "Federico Pizzuti <pizzutifederico27@gmail.com>"]

[dependencies]
cortex-m = "0.5.1"
cortex-m-rt = "0.5.0"
panic-abort = "0.1.1"
pid = { path = "lib/pid" }
max31865 = { path = "lib/max31865" }
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal.git" }
light-cli = { git = "https://github.com/rudihorn/light-cli.git" }

