[package]
name = "test-response"
version = "0.1.0"
authors = ["Rudi Horn <dyn-git@rudi-horn.de>"]

[dependencies]
cortex-m = "0.5.1"
cortex-m-rt = "0.5.0"
panic-abort = "0.1.1"
max31865 = { path = "../max31865" }
stm32f103xx-hal = { path = "../stm32f103xx-hal" }
light-cli = { path = "../light-cli" }
